--- a/index.html
+++ b/index.html
@@ -4,5 +4,29 @@
 </head>
 <body>
   <h1>Hello World</h1>
+</body
+  <head>
+    <title>Student Information</title>
+  </head>
+  <body>
+    <h2>Student Information</h2>
+    <table border="1" cellpadding="8">
+    <tr>
+        <th>Serial No</th>
+        <th>Name</th>
+        <th>Roll No</th>
+        <th>Mobile No</th>
+    </tr>
+    <tr><td>1</td><td>Anushka</td><td>101</td><td>9876543210</td></tr>
+    <tr><td>2</td><td>Madhura</td><td>102</td><td>9123456780</td></tr>
+    <tr><td>3</td><td>Sanika</td><td>103</td><td>9988776655</td></tr>
+    <tr><td>4</td><td>Vaishnavi</td><td>104</td><td>9012345678</td></tr>
+    <tr><td>5</td><td>Divya</td><td>105</td><td>9090909090</td></tr>
+    <tr><td>6</td><td>Diksha</td><td>106</td><td>9898989898</td></tr>
+    <tr><td>7</td><td>Kavya</td><td>107</td><td>9765432109</td></tr>
+    <tr><td>8</td><td>Neha</td><td>108</td><td>9654321098</td></tr>
+    <tr><td>9</td><td>Aliya</td><td>109</td><td>9543210987</td></tr>
+    <tr><td>10</td><td>Priya</td><td>110</td><td>9432109876</td></tr>
+</table>
 </body>
 </html>
