--- a/index.html
+++ b/index.html
@@ -30,3 +30,22 @@
 </table>
 </body>
 </html>
+
+<html>
+<head>
+    <title>Login Page</title>
+</head>
+<body>
+    <h2>Login Page</h2>
+    <form>
+        <label>Username:</label><br>
+        <input type="text" name="username" placeholder="Enter Username"><br><br>
+
+        <label>Password:</label><br>
+        <input type="password" name="password" placeholder="Enter Password"><br><br>
+
+        <input type="submit" value="Login">
+        <input type="reset" value="Reset">
+    </form>
+</body>
+</html>
